package rec.gui;

import "rec/util/file/VirtualFile.proto";
import "rec/music/Metadata.proto";

message RecentFile {
  optional int64 timestamp = 1;
  optional util.file.VirtualFile file = 2;
  optional music.Metadata metadata = 3;
};

message RecentFiles {
  repeated RecentFile file = 3;
  optional int32 max_files = 4 [default = 16];
  optional bool reload_most_recent = 5 [default = true];
};
